@@ -5,3 +5,7 @@ First Version
 2011-01-24
 Update to SDK 1.3
 View Customer page
+
+2011-02-08
+Minor updates
+Post http://ajlopez.wordpress.com/2011/02/08/azure-a-simple-application-using-tables/
